# solver_test_engine

./: Makefile  README.md  killalljob.sh  ndpcluster  runtesteasy  submit.sh
check/: rmcore.sh  scip.set
check/checker/: Makefile
check/checker/src/: gmputils.cpp  gmputils.h  main.cpp  model.cpp  model.h  mpsinput.cpp  mpsinput.h
check/instances/: compress.sh
check/instances/ndp/: generate.py
check/results/: CalMean.awk  authorization.sh  compare.awk  ndp.awk  run_res.sh  search_output.sh  statistic_multiagg.awk
check/results/default/: testeasy.cplex_callback_ndp.1threads.7200s.res  testeasy.cplex_callback_ndp.1threads.7200s.sh  testeasy.file
check/scripts/: parse.awk  parse_cplex.awk  parse_cplex_callback_ndp.awk  parse_gurobi.awk  parse_scip.awk  run.sh  run_cplex.sh  run_cplex_callback_ndp.sh  run_functions.sh  run_gurobi.sh  run_scip.sh  runjob.sh  runsubjob.sh
check/scripts/mpi/: Makefile  mpi.cpp  mpiexecline
check/settings/: esparsify_close.set  multiagg_oneround.set  rename.sh
check/settings/ndp/: ndp-1.set  ndp-2.set  ndp-3.set  ndp0cpx1.set  ndp11.set  ndp2.set  ndp21.set  ndp22.set  ndp23.set  (+1 more)
check/testsets/: 4M.solu  4M.test  barrier.test  bidirected.test  check.solu  check.test  clearRpeat  coral.solu  coral.test  daniel.test  directed.test  plato.test  relax.test  simplex.test  testeasy.test  ucp.test  undirected.test
docker/: Dockerfile  Dockerfile_Deb  sources.list
source_code/cplex/ndp/: CMakeLists.txt  Makefile  README.md  debug.sh
source_code/cplex/ndp/src/: functions.cpp  functions.h  main.cpp  paramset.cpp  paramset.h
(+90 files in other folders)
